[tool.poetry]
name = "pytest-tmux"
version = "0.0.4"
description = "A pytest plugin that enables tmux driven tests"
authors = ["rockandska <yoann_mac_donald@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rockandska/pytest-tmux"
repository = "https://github.com/rockandska/pytest-tmux.git"
documentation = "https://pytest-tmux.readthedocs.io"
packages = [{include = "pytest_tmux"}]
classifiers= [
  'Development Status :: 4 - Beta',
  'Framework :: Pytest',
  'Intended Audience :: Developers',
  'Topic :: Software Development :: Testing',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  
  'Operating System :: OS Independent',
  'License :: OSI Approved :: MIT License',
  'Typing :: Typed',
]

[tool.poetry.urls]
Issues = "https://github.com/rockandska/pytest-tmux/issues"
Changes = "https://github.com/rockandska/pytest-tmux/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.7, <= 3.11.9999"
libtmux = "0.20"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=6"

[tool.poetry.group.format]
optional = true
[tool.poetry.group.format.dependencies]
black = "*"
isort = "*"

[tool.poetry.group.lint]
optional = true
[tool.poetry.group.lint.dependencies]
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"

[tool.poetry.group.type]
optional = true

[tool.poetry.group.type.dependencies]
mypy = "*"
typing-extensions = { version="*", python = "< 3.8" }

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = ">1.4"
mkdocstrings-python = "*"
mkdocs-material = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"
mkdocs-autorefs = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pytest11]
pytest-tmux = "pytest_tmux.plugin"

[tool.mypy]
exclude = [
    '^pytest_tmux/subrepo'
]
